--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -12,6 +12,21 @@
 	--sl-color-gray-6: #272727;
 	--sl-color-black: #181818;
 }
+/* Light mode colors. */
+:root[data-theme='light'] {
+	--sl-color-accent-low: #dfd8b6;
+	--sl-color-accent: #7d6b00;
+	--sl-color-accent-high: #FDDA0D;
+	--sl-color-white: #181818;
+	--sl-color-gray-1: #272727;
+	--sl-color-gray-2: #383838;
+	--sl-color-gray-3: #585858;
+	--sl-color-gray-4: #8b8b8b;
+	--sl-color-gray-5: #c2c2c2;
+	--sl-color-gray-6: #eeeeee;
+	--sl-color-gray-7: #f6f6f6;
+	--sl-color-black: #ffffff;
+}
 
 .button {
   background: var(--sl-color-text-accent) !important;
